setup localization
Took 1 hour 4 minutes